k8s/gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  name: recipe-management-ingress-recipe-management-local
  namespace: recipe-management
spec:
  hostnames:
  - recipe-management.local
  - sous-chef-proxy.local
  parentRefs:
  - name: kong
    namespace: kong
  rules:
  - backendRefs:
    - name: recipe-management-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /api/v1/recipe-management
status:
  parents: []
